2001-05-24 01:09 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * source/rdd/dbcmd.c
      * fixed dbSetIndex/ordListAdd to set the order and go top IF
         it's the first bag

   * contrib/rdd_ads/ads.ch
      + added #define ADS_LOCAL_SERVER, ADS_REMOTE_SERVER,
            ADS_AIS_SERVER  for "ORing" options
      * fixed _SET_DELETED typo

   * contrib/rdd_ads/ads1.c
      * Fixed EOF flag when doing a GO 0

2001-05-23 21:15 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hbclass.ch
     ! Corrected few minor typos.

   * source/compiler/harbour.slx
   * source/macro/macro.slx
     - Commented few unused lines.

   * contrib/dot/pp.prg
     % Rewrote NextToken() and NextExp().
     + Added NextIdentifier()
     ! Found that Clipper PP is not processing tokens read by NextToken() and NextExp() so removed recursive support,
       and changed logic in ProcessLine() to linear process:
         #defines against all valid Identifiers - Expansion forces a resacn from top.
         #[x]translates against all tokens - Expansion forces a resacn from top of #defines.
         #[x]command agains the first token - Expansion forces a resacn from top of #defines.
     ! Corrected and refined many aspects of Interpreter mode.
     + Added ExecuteMethod() and support for OO syntax.
     + Added support for -I<includepaths...> command line switch.

   * contrib/dot/rp_run.ch
     + Added support for OO syntax.

   * contrib/dot/pp.txt
     * Updated documentation.

   /* PP Interpreter mode, is now capable of running code like this:
        //---------------------------//
        Function Main()
            LOCAL o := TTest():New()

            o:Increment()
            Alert( o:nVar )
        Return nil

        CLASS TTest
           VAR nVar
           METHOD New CONSTRUCTOR
           METHOD Increment()
        ENDCLASS

        METHOD New //CLASS TTest /* CLASS clause now optional */
           ::nVar := 0
        return Self
